# mev-og-v2

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.pool_scanner  LICENSE  Makefile  PROJECT_BIBLE.md  README.md  config.example.yaml  config.yaml  docker-compose.yml  foundry.toml  mypy.ini  orchestrator_ttl.py  pyproject.toml  requirements.txt
AGENTS/: README.md
adapters/: __init__.py  alpha_signals.py  bridge_adapter.py  cex_adapter.py  dex_adapter.py  flashloan_adapter.py  market_event_feed_adapter.py  pool_scanner.py  pool_scanner_service.py  social_alpha.py
agents/: __init__.py  agent_registry.py  capital_lock.py  check_gates.py  drp_agent.py  founder_gate.py  gatekeeper.py  multi_sig.py  ops_agent.py
ai/: __init__.py  audit_agent.py  intent_classifier.py  intent_ghost.py  mutation_log.py  mutation_manager.py  promote.py  voting.py
contracts/: PauseKill.sol
core/: __init__.py  alpha_dashboard.py  logger.py  mempool_monitor.py  meta_orchestrator.py  metrics.py  node_selector.py  orchestrator.py  rate_limiter.py  secret_manager.py  strategy_base.py  strategy_scoreboard.py
docs/: AI_LLM_SAFETY.md  ONBOARDING.md
grafana/: strategy_scoreboard.json
infra/: prometheus.yml
logs/: audit_agent.json  cross_domain_arb.json  export_state.json  mutation_main.json  mutator.json  strategy_score.json  strategy_scores.json
scripts/: batch_ops.py  cli.py  export_project_state.sh  export_state.sh  kill_switch.sh  load_vault_secrets.py  replay_arms_race.py  rollback.sh  scan_secrets.py  simulate_fork.sh  start_with_metrics.sh  (+4 more)
(+107 files in other folders)
